add user auth router and CORS setting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "training-fastapi"
+name = "training-tracker-fastapi"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
